Fixes the bug: in Settings> Project Settings> Notifications> Customize email in the left sidebar the text overlaps when it goes on two line

--- a/src/app/project-edit-add/notification-email/notification-email.component.scss
+++ b/src/app/project-edit-add/notification-email/notification-email.component.scss
@@ -125,10 +125,15 @@ $f21blue: #039be5;
   height: 40px;
   border-radius: 0 20px 20px 0;
   margin-right: 16px;
-  line-height: 39px;
+  // line-height: 39px;
   font-weight: 400;
   cursor: pointer;
   padding-left: 8px;
+  line-height: 1.2;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  font-size: 12px;
 }
 .nav-email-tmplt-li:hover {
   background-color: rgba(0, 0, 0, 0.04);
